--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <meta name="description" content="This is the design library" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
+    <meta name="description" content="This is Ivp Web SErvices ltd" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@700;800&display=swap" rel="stylesheet">
