--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <meta name="description" content="This is Ivp Web SErvices ltd" />
+    <meta content="web, web development, website, development, online, web design, " name="keywords">
+    <meta content="IvP Web Services ltd is a web development company that provide affordable high quality web design and web development services." name="description">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- Facebook Opengraph integration: https://developers.facebook.com/docs/sharing/opengraph -->
+    <meta property="og:title" content="IvP Web Services ltd">
+    <meta property="og:image" content="http://www.ivpweb.com/img/social.png">
+    <meta property="og:url" content="http://www.ivpweb.com">
+    <meta property="og:site_name" content="IvP Web">
+    <meta property="og:description" content="IvP Web Services ltd is a web development company that provide affordable high quality web design and web development services.">
+    
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@700;800&display=swap" rel="stylesheet">
